--- a/modules/libutil/src/Makefile
+++ b/modules/libutil/src/Makefile
@@ -12,23 +12,28 @@ INCLUDES = -I../../../nsprpub/lib/libc/include -I../../../nsprpub/pr/include \
 					 -I../../../js/src -I../../../nsprpub/lib/ds -I../../libutil/public \
 					 -I../../libimg/public -I../../../lib/liblayer/include \
 					 -I../../security/freenav
-CFLAGS = -Wall -g3 -DXP_UNIX -DJS_THREADSAFE -DSTANDALONE_IMAGE_LIB
+CFLAGS = -Wall -O2 -DJS_THREADSAFE -DSTANDALONE_IMAGE_LIB
 
 CC? = gcc
 AR? = ar
 RM = rm -f
 
+ifeq ($(OS),Windows_NT)
+	CC = gcc
+	CFLAGS += -DXP_WIN -DXP_PC
+	ifeq ($(SHELL),sh.exe)
+		# Executing under cmd.exe
+		RM = del /Q 2>NUL
+	endif
+else
+	CFLAGS += -fPIC -DXP_UNIX
+endif
+
+
 LIB = libmozutil
 SHARED_LIB = $(LIB).so
 STATIC_LIB = $(LIB).a
 LDFLAGS =
-
-ifeq ($(OS),Windows_NT)
-	CC = gcc
-	SHARED_LIB = $(LIB).dll
-	LDFLAGS += -L../../../nsprpub/pr/src -lnspr -Wl,--out-implib,$(LIB).a
-endif
-
 
 all: $(STATIC_LIB)
 
@@ -41,10 +46,10 @@ $(SHARED_LIB): $(OBJS)
 	$(CXX) -shared -o $@ $(OBJS) $(LDFLAGS)
 
 .c.o:
-	$(CC) $(CFLAGS) $(INCLUDES) -fpic -MMD -MP -MT $@ -o $@ -c $<
+	$(CC) $(CFLAGS) $(INCLUDES) -MMD -MP -MT $@ -o $@ -c $<
 
 .cpp.o:
-	$(CXX) $(CFLAGS) $(INCLUDES) -fpic -MMD -MP -MT $@ -o $@ -c $<
+	$(CXX) $(CFLAGS) $(INCLUDES) -MMD -MP -MT $@ -o $@ -c $<
 
 clean:
 	$(RM) $(OBJS)
