Remove libpref from requirement

--- a/network/client/Makefile
+++ b/network/client/Makefile
@@ -11,7 +11,7 @@ INCLUDES = -I../../nsprpub/lib/libc/include -I../../nsprpub/pr/include \
 					 -I../../xpcom/public -I../public -I. -I../../base/src \
 					 -I../../include -I../../nsprpub/lib/ds -I../../widget/public \
 					 -I../../modules/libimg/public -I../../modules/libutil/public \
-					 -I../../view/public -I../../modules/libpref/public \
+					 -I../../view/public \
 					 -I../../js/src -I../protocol/http -I../../modules/security/freenav \
 					 -I../../lib/liblayer/include -I../main -I../protocol/file \
 					 -I../protocol/ftp -I../protocol/about -I../protocol/gopher \
