--- a/xpcom/Makefile
+++ b/xpcom/Makefile
@@ -1,8 +1,10 @@
 # xpcom master makefile
 
 build:
+#	@(cd typelib && $(MAKE))
 	@(cd src && $(MAKE))
 
 clean:
+#	@(cd typelib && $(MAKE) clean)
 	@(cd src && $(MAKE) clean)
 
