Gfx depends on widget now on Unix
I'm hoping this can be fixed in a future revision

--- a/gfx/src/Makefile
+++ b/gfx/src/Makefile
@@ -1,27 +1,38 @@
 # Makefile for libraptorgfx
+# It's kind of a pain to link a static archive into a shared object, so we
+# just create the shared object directly.
 
 .PHONY: all clean
 
+# Shared components
 SRCS = nsColor.cpp nsColorNames.cpp nsColorNamesRGB.cpp nsFont.cpp \
 			 nsRect.cpp nsDeviceContext.cpp \
 			 nsTransform2D.cpp nsImageRenderer.cpp nsImageRequest.cpp
 
+# Platform specific components
+# XLIB sources
+XLIB_SRCS = xlib/nsDeviceContextSpecFactoryX.cpp xlib/nsDeviceContextXlib.cpp \
+	xlib/nsFontMetricsXlib.cpp xlib/nsImageXlib.cpp xlib/nsRenderingContextXlib.cpp \
+	xlib/nsDeviceContextSpecXlib.cpp xlib/nsDrawingSurfaceXlib.cpp \
+	xlib/nsGfxFactoryXlib.cpp xlib/nsRegionXlib.cpp
+
 OBJS = $(SRCS:.cpp=.o)
 DEPS = $(SRCS:.cpp=.d)
+
+TOOLKIT = xlib
+#TOOLKIT = motif
 
 INCLUDES = -I../../nsprpub/lib/libc/include -I../../nsprpub/pr/include \
 					 -I../../xpcom/public -I../public -I. -I../../base/src \
 					 -I../../include -I../../nsprpub/lib/ds -I../../widget/public \
 					 -I../../modules/libimg/public -I../../modules/libutil/public \
-					 -I../../view/public
+					 -I../../view/public -I../../dom/public -I$(TOOLKIT)
 CFLAGS = -Wall -g3
 
 CC? = gcc
 AR? = ar
 RM = rm -f
 
-#TOOLKIT = motif
-TOOLKIT = xlib
 DEFINES = -D_IMPL_NS_GFX
 LIB = libraptorgfx
 SHARED_LIB = $(LIB).so
@@ -42,13 +53,12 @@ ifeq ($(OS),Windows_NT)
 		-lxpcom -lnspr -lwsock32
 else
 	CFLAGS += -fpic
+	SRCS += $(XLIB_SRCS)
+	LDFLAGS += -L../../widget/src -lraptorwidget
 endif
 
 
-build: $(PLATFORM_LIB) $(SHARED_LIB)
-
-$(PLATFORM_LIB):
-	@(cd $(TOOLKIT) && $(MAKE))
+build: $(SHARED_LIB)
 
 $(SHARED_LIB): $(OBJS)
 	$(CXX) -shared -o $@ $(OBJS) $(LDFLAGS)
