Pull in plugin system

--- a/webshell/src/Makefile
+++ b/webshell/src/Makefile
@@ -11,6 +11,7 @@ INCLUDES = -I../../nsprpub/lib/libc/include -I../../nsprpub/pr/include \
 					 -I../../xpcom/public -I../public -I. -I../../base/src \
 					 -I../../include -I../../nsprpub/lib/ds -I../../widget/public \
 					 -I../../modules/libimg/public -I../../modules/libutil/public \
+					 -I../../modules/plugin/nglsrc -I../../modules/plugin/public \
 					 -I../../view/public -I../../gfx/public -I../../modules/libpref/public \
 					 -I../../js/src -I../../network/module -I../../layout/base/public \
 					 -I../../network/public
