Add httpurl library

--- a/network/Makefile
+++ b/network/Makefile
@@ -4,6 +4,7 @@ build:
 	@(cd client && $(MAKE))
 	@(cd main && $(MAKE))
 	@(cd mimetype && $(MAKE))
+	@(cd protocol && $(MAKE))
 	@(cd module && $(MAKE))
 	@(cd util && $(MAKE))
 
@@ -11,6 +12,7 @@ clean:
 	@(cd client && $(MAKE) clean)
 	@(cd main && $(MAKE) clean)
 	@(cd mimetype && $(MAKE) clean)
+	@(cd protocol && $(MAKE) clean)
 	@(cd module && $(MAKE) clean)
 	@(cd util && $(MAKE) clean)
 
