--- a/network/cnvts/Makefile
+++ b/network/cnvts/Makefile
@@ -1,34 +1,30 @@
-# Makefile for libmoznetlib
+# Makefile for libmozcnetinit
 
 .PHONY: all clean
 
-SRCS = nsLoadAttribs.cpp nsHttpUrl.cpp nsHttpURLFactory.cpp \
-			 nsNetFactory.cpp nsNetService.cpp nsNetThread.cpp \
-			 nsStubContext.cpp
+SRCS = cvactive.c cvchunk.c
 
-OBJS = $(SRCS:.cpp=.o)
-DEPS = $(SRCS:.cpp=.d)
+OBJS = $(SRCS:.c=.o)
+DEPS = $(SRCS:.c=.d)
 
 INCLUDES = -I../../nsprpub/lib/libc/include -I../../nsprpub/pr/include \
 					 -I../../xpcom/public -I../public -I. -I../../base/src \
 					 -I../../include -I../../nsprpub/lib/ds -I../../widget/public \
 					 -I../../modules/libimg/public -I../../modules/libutil/public \
-					 -I../../view/public -I../../modules/libpref/public \
-					 -I../../js/src -I../protocol/http -I../main -I../public \
-					 -I../../lib/liblayer/include -I../protocol/sockstub \
-					 -I../protocol/file -I../protocol/ftp -I../protocol/about \
-					 -I../protocol/gopher -I../protocol/remote -I../cnvts \
+					 -I../../view/public \
+					 -I../../js/src -I../protocol/http -I../../modules/security/freenav \
+					 -I../../lib/liblayer/include -I../main -I../protocol/file \
+					 -I../protocol/ftp -I../protocol/about -I../protocol/gopher \
+					 -I../protocol/js -I../protocol/remote -I../protocol/dataurl \
 					 -I../cache
-DEFINES= -DNETSCAPE
+DEFINES= -DNETSCAPE -DMOZILLA_CLIENT
 CFLAGS = -Wall -g3
 
 CC? = gcc
 AR? = ar
 RM = rm -f
 
-LDFLAGS = -L../cnvts -L../protocol/http -lnetcnvts -lhttpurl
-
-LIB = libmoznetlib
+LIB = libnetcnvts
 SHARED_LIB = $(LIB).so
 STATIC_LIB = $(LIB).a
 
@@ -36,7 +32,7 @@ ifeq ($(OS),Windows_NT)
 	CC = gcc
 	SHARED_LIB = $(LIB).dll
 	DEFINES += -D_IMPL_NS_NET -DXP_PC -DXP_WIN
-	LDFLAGS += -Wl,--out-implib,$(LIB).a -lwsock32 -lwinmm
+	LDFLAGS = -Wl,--out-implib,$(LIB).a -lwsock32 -lwinmm
 endif
 
 
@@ -48,7 +44,7 @@ $(STATIC_LIB): $(OBJS)
 	ranlib $(STATIC_LIB)
 
 $(SHARED_LIB): $(OBJS)
-	$(CXX) -shared -o $@ $(OBJS) $(LDFLAGS)
+	$(CC) -shared -o $@ $(OBJS) $(LDFLAGS)
 
 .c.o:
 	$(CC) $(CFLAGS) $(INCLUDES) $(DEFINES) -fPIC -MMD -MP -MT $@ -o $@ -c $<
