--- a/network/protocol/Makefile
+++ b/network/protocol/Makefile
@@ -1,8 +1,10 @@
 # network/protocol master makefile
 
 build:
+	@(cd file && $(MAKE))
 	@(cd http && $(MAKE))
 
 clean:
+	@(cd file && $(MAKE) clean)
 	@(cd http && $(MAKE) clean)
 
