Flesh out network libs

--- a/network/Makefile
+++ b/network/Makefile
@@ -1,6 +1,7 @@
 # network master makefile
 
 build:
+	@(cd cache && $(MAKE))
 	@(cd client && $(MAKE))
 	@(cd cnvts && $(MAKE))
 	@(cd main && $(MAKE))
@@ -10,6 +11,7 @@ build:
 	@(cd util && $(MAKE))
 
 clean:
+	@(cd cache && $(MAKE) clean)
 	@(cd client && $(MAKE) clean)
 	@(cd cnvts && $(MAKE) clean)
 	@(cd main && $(MAKE) clean)
