--- a/network/cnvts/Makefile
+++ b/network/cnvts/Makefile
@@ -2,7 +2,7 @@
 
 .PHONY: all clean
 
-SRCS = cvactive.c cvchunk.c
+SRCS = cvactive.c cvchunk.c cvjscfg.c cvsimple.c cvunzip.c
 
 OBJS = $(SRCS:.c=.o)
 DEPS = $(SRCS:.c=.d)
@@ -11,6 +11,7 @@ INCLUDES = -I../../nsprpub/lib/libc/include -I../../nsprpub/pr/include \
 					 -I../../xpcom/public -I../public -I. -I../../base/src \
 					 -I../../include -I../../nsprpub/lib/ds -I../../widget/public \
 					 -I../../modules/libimg/public -I../../modules/libutil/public \
+					 -I../../modules/libpref/public \
 					 -I../../view/public \
 					 -I../../js/src -I../protocol/http -I../../modules/security/freenav \
 					 -I../../lib/liblayer/include -I../main -I../protocol/file \
