--- a/network/main/Makefile
+++ b/network/main/Makefile
@@ -4,8 +4,9 @@
 
 CPP_SRCS =
 SRCS = jsautocf.c jscookie.c mkautocf.c mkconect.c mkhelp.c mkfsort.c \
-			 mkgeturl.c mkparse.c \
-			 mkselect.c mksockrw.c mksort.c mkstream.c mktrace.c mkutils.c
+			 mkgeturl.c mkmessag.c mkpadpac.c mkparse.c \
+			 mkselect.c mksockrw.c mksort.c mkstream.c mktrace.c mkutils.c \
+			 prefetch.c
 
 OBJS = $(SRCS:.c=.o) $(CPP_SRCS:.cpp=.o)
 DEPS = $(SRCS:.c=.d) $(CPP_SRCS:.cpp=.d)
